--- a/src/styles.css
+++ b/src/styles.css
@@ -1,38 +1,42 @@
 @tailwind base;
 
-/* latin-ext */
-@font-face {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v14/1Ptug8zYS_SKggPNyCMIT4ttDfCmxA.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v14/1Ptug8zYS_SKggPNyC0IT4ttDfA.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
-
 body {
     font-family: 'Raleway', sans-serif;
+}
+
+#background-image {
+    height: 100%;
     background-image: url('./images/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: overlay;
+    filter: blur(15px);
+    transition: 5s filter linear;
+}
+
+#background-image.deblur {
+    filter: blur(0px)
 }
 
 #fingerprint-scanner {
     filter: invert(36%) sepia(28%) saturate(4797%) hue-rotate(190deg) brightness(107%) contrast(98%);
+    animation: pulse 0.5s 2s 2 ease-in-out;
 }
 
 #fingerprint-scanner:active {
     filter: invert(82%) sepia(19%) saturate(4332%) hue-rotate(176deg) brightness(96%) contrast(106%);
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1.0);
+    }
+    50% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1.0);
+    }
 }
 
 .h-screen-50 {
